<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:padding="15dip">
		<Button
			android:text="@string/button_proximity"
			android:id="@+id/button_proximity"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_accelerometer"
			android:id="@+id/button_accelerometer"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_light"
			android:id="@+id/button_light"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_orientation"
			android:id="@+id/button_orientation"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_magnetic_field"
			android:id="@+id/button_magnetic_field"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_gyroscope"
			android:id="@+id/button_gyroscope"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_pressure"
			android:id="@+id/button_pressure"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
		<Button
			android:text="@string/button_temperature"
			android:id="@+id/button_temperature"
			android:onClick="onClick"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"></Button>
	</LinearLayout>
</LinearLayout>
